/*  Nama File : Pajak.java
    Deskripsi : Interface Pajak yang berisi method hitungPajak
    Pembuat   : Dandy Faishal Fahmi 24060123140136
    Tanggal   : 20 Maret 2025
*/

public interface Pajak {
  double hitungPajak();
}
